--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "cross-env": "^5.0.1"
   }
 }
