--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "vue": "^2.1.10"
   },
   "dependencies": {
